Thu Jun  7 16:34:41 2001  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htcommon/defaults.cc: Add new attribute plural_suffix to set the
	language-dependent suffix for PLURAL_MATCHES contributed by Jesse.
	* htsearch/Display.cc (setVariables): Use it.
	* htdoc/attrs.html, htdoc/cf_byname.html, htdoc/cf_byprog.html:
	Document it.

Thu Jun  7 16:03:17 2001  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htsearch/Display.{h,cc}, htcommon/defaults.cc: Added multi-excerpt 
	feature and max_excerpts attribute, as contributed by Jim Cole.
	* htdoc/THANKS.html, htdoc/attrs.html, htdoc/cf_byname.html,
	htdoc/cf_byprog.html: Credit where due, and document attribute.

Thu Jun  7 15:27:33 2001  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdig/ExternalParser.cc: Backported from 3.2.0b3, fixing these
	problems: no longer confused by "; charset=..." in Content-Type,
	avoids security problems with popen() and shell parsing untrusted URL
	(PR#542, PR#951), avoids predictable temporary file name if mkstemp()
	exists, binary output from external converter no longer mangled,
	less ambiguous error messages, opens temp. file in binary mode on
	non-Unix systems.

Thu Jun  7 15:10:14 2001  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htcommon/DocumentDB.{h,cc}: Replace CreateSearchDB() with DumpDB(),
	add LoadDB(), both backported from 3.2.0b3.
	* htdig/htdig.cc (main, usage), htdig/Makefile.in, htdoc/htdig.html:
	Add handling of -m (minimal) option, file input for URLs, and arg 0
	handling for htdump & htload.
	* htdig/HTML.cc (do_tag): Change all white space to blanks in meta
	description tag, for proper ASCII record dumps by htdump, and to fix
	bug #405771.
	* htlib/String.cc (= operator), htlib/htString.cc: change handling
	of 0 length strings.  Add readLine() for htload support.

Thu Jun  7 14:41:42 2001  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdig/Retriever.cc (got_href): Fix hop count mishandling.
